--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -29,7 +29,7 @@ jobs:
     name: 💍 pre-commit
     # For public repos use runs-on: ubuntu-latest
     # For private repos use runs-on: self-hosted
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: bjorncloudandthings/terraform-aws-github:latest
     steps:
       - uses: actions/checkout@v3
@@ -64,7 +64,7 @@ jobs:
     name: ✅ tests
     # For public repos use runs-on: ubuntu-latest
     # For private repos use runs-on: self-hosted
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: bjorncloudandthings/terraform-aws-github:latest
     steps:
       - uses: actions/checkout@v3
