--- a/modules/user_data/cloud-init-ephemeral.yaml
+++ b/modules/user_data/cloud-init-ephemeral.yaml
@@ -69,6 +69,10 @@ write_files:
     ExecStart=/home/ubuntu/ephemeral_runner_svc.sh
     [Install]
     WantedBy=multi-user.target
+- path: /etc/crontab
+  content: |
+    */15 * * * * root docker system prune -f > var/log/docker_prune.log 2>&1
+  append: true
 %{~ if length(CLOUDWATCH_LOG_GROUP) > 0 }
 - path: awslogs.conf
   content: |
