--- a/modules/user_data/cloud-init-ephemeral.yaml
+++ b/modules/user_data/cloud-init-ephemeral.yaml
@@ -115,6 +115,12 @@ runcmd:
 - chmod a+r -R /home/ubuntu/actions-runner
 - systemctl enable this.service
 
+# install kubectl/aws
+- apt remove awscli -y
+- snap install kubectl --channel=1.28/stable --classic
+- snap install aws-cli --classic
+
+
 power_state:
   mode: reboot
 
