--- a/.github/workflows/pre-commit-and-tests.yml
+++ b/.github/workflows/pre-commit-and-tests.yml
@@ -43,6 +43,7 @@ jobs:
             pip install -r requirements.txt
           else
             pip install pre-commit
+            pip install checkov
           fi
       - name: Run
         run: |
@@ -55,42 +56,3 @@ jobs:
       - name: cat pre-commit log
         if: failure()
         run: cat ~/.cache/pre-commit/pre-commit.log
-
-  #--------------------------------------------------------------
-  # TESTS
-  #--------------------------------------------------------------
-  tests:
-    needs: [pre_commit]
-    name: ✅ tests
-    # For public repos use runs-on: ubuntu-latest
-    # For private repos use runs-on: self-hosted
-    runs-on: ubuntu-latest
-    container: bjorncloudandthings/terraform-aws-github:latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
-      - uses: hashicorp/setup-terraform@v2
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: ${{ env.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: ${{ env.AWS_ROLE_ARN }}
-          role-duration-seconds: 3600
-      - name: Install requirements
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install -r requirements.txt
-      - name: Run
-        run: |
-          source .venv/bin/activate
-          cat <<- EOF > .pytest_config.yaml
-            variables:
-              run_id: ${{ github.run_id }}
-          EOF
-          echo "::echo::off"
-          pytest --error-for-skips
-        env:
-          PYTEST_ADDOPTS: "--color=yes"
-        timeout-minutes: 30
