--- a/.github/workflows/pre-commit-and-tests.yml
+++ b/.github/workflows/pre-commit-and-tests.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python -m venv .venv
+          python3 -m venv .venv
           source .venv/bin/activate
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
