--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
     hooks:
     - id: Terraform docs
       name: Terraform docs
-      entry: python examples/terraform-docs.py
+      entry: python3 examples/terraform-docs.py
       language: system
       types: [python]
       always_run: true
