--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,8 @@
 		}
 	},
 
+	"features": {},
+
 	// Sets the run context to one level up instead of the .devcontainer folder.
 	"context": "..",
 
@@ -21,7 +23,7 @@
 	"forwardPorts": [3000],
 
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
-	// "postCreateCommand": "apt-get update && apt-get install -y curl",
+	"postCreateCommand": "bash dev-bootstrap.sh",
 
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
@@ -32,30 +34,6 @@
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 
-	"features": {
-		"terraform": "1.0",
-		"aws-cli": "latest"
-	},
-
 	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"python.linting.pylintEnabled": false,
-		"python.linting.flake8Enabled": true,
-		"python.linting.enabled": true,
-		"terraform.languageServer.args": [
-			"-port 3000"
-		],
-		"terraform.languageServer.tcp.port": 3000
-	},
-
-	"extensions": [
-		"hashicorp.terraform",
-		"redhat.vscode-yaml",
-		"ms-python.python",
-		"mutantdino.resourcemonitor"
-	],
-
-	// Hack for terraform-ls
-	// "postStartCommand": "nohup bash -c '/home/vscode/.vscode-server/extensions/hashicorp.terraform-2.24.1-linux-arm64/bin/terraform-ls serve -port 3000 &'"
-
+	// "settings": {},
 }
