--- a/.github/workflows/pre-commit-and-tests.yml
+++ b/.github/workflows/pre-commit-and-tests.yml
@@ -1,9 +1,5 @@
 name: pre-commit
 
-env:
-  AWS_REGION: af-south-1
-  AWS_ROLE_ARN: arn:aws:iam::353444730604:role/cat-genrl-prd-infra-github-workflows
-
 on:
   workflow_dispatch:
   pull_request:
@@ -30,45 +26,12 @@ jobs:
     # For public repos use runs-on: ubuntu-latest
     # For private repos use runs-on: self-hosted
     runs-on: ubuntu-latest
-    container: bjorncloudandthings/terraform-aws-github:latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Get versions
-        id: versions
+      - uses: jdx/mise-action@v2
+
+      - name: pre-commit run
         run: |
-          echo "python_version=$(cat .python-version)" >> $GITHUB_OUTPUT
-          echo "terraform_version=$(cat .terraform-version)" >> $GITHUB_OUTPUT
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ steps.versions.outputs.python_version }}
-
-          # 2025-01: Can't upgrade to setup-terraform@v3 due to NodeJS incompatibility with container image.
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ steps.versions.outputs.terraform_version }}
-
-      - name: Install requirements
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            pip install pre-commit
-            pip install checkov
-          fi
-
-      - name: Run
-        run: |
-          source .venv/bin/activate
-          pre-commit install
-          if [[ "${{ env.GITHUB_REPOSITORY}}" == "cloudandthings/terraform-aws-template" ]]; then
-            export SKIP=no-vanilla-readme
-          fi
-          pre-commit run --all-files --show-diff-on-failure
-
-      - name: cat pre-commit log
-        if: failure()
-        run: cat ~/.cache/pre-commit/pre-commit.log
+          echo ...running pre-commit checks...
+          pre-commit run --config .pre-commit-config.yaml --all-files --show-diff-on-failure
